--- a/data/static/superpage.html
+++ b/data/static/superpage.html
@@ -11,6 +11,7 @@
 		<h2>Wow on peut faire des supers headers</h2>
 		<h3>On s'amuse avec le html</h3>
 		<div>Appuie sur ce bouton si tu veux revenir au début : <a href="./index.html">bye</a></div>
+		<img src="download.jpeg" alt="super emote">
     </main>
   </body>
 </html> 
