--- a/data/static/static_form.html
+++ b/data/static/static_form.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <main>
-        <form action="download.jpeg" method="POST">
+        <form action="" method="POST">
 			<div>
 			  <label for="say">What greeting do you want to say?</label>
 			  <input name="say" id="say" value="Hi" />
