--- a/data/static/video.html
+++ b/data/static/video.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-		<video src="test.mp4" controls>
+		<video src="video.mp4" controls>
 			<!-- <source src="video.mp4" type="video/mp4">
 			<source src="movie.ogg" type="video/ogg"> -->
 		  Your browser does not support the video tag.
