reorganize + error page

--- a/data/static/monsupersite.html
+++ b/data/static/monsupersite.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Barrez-vous de chez moi</title>
-		<link href="monsupersite.css" rel="stylesheet">
+		<link href="css/monsupersite.css" rel="stylesheet">
 	</head>
 	<body>
 		<h1>Bienvenu chez moi :)</h1>
