--- a/data/static/post.html
+++ b/data/static/post.html
@@ -4,13 +4,13 @@
 
 <h2>HTML Forms</h2>
 
-<form action="/cgi-local/post.php" method="post">
+<form action="post.html" method="post">
 	Name: <input type="text" name="name"><br>
 	E-mail: <input type="text" name="email"><br>
 	<input type="submit">
 	</form>
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+<p>If you click the "Submit" button, nothing happens.</p>
 
 </body>
 </html>
