--- a/data/error_pages/404.html
+++ b/data/error_pages/404.html
@@ -15,5 +15,5 @@
   <span class="four"><span class="screen-reader-text">4</span></span>
 </section>
 <div class="link-container">
-  <a target="_blank" href="http://127.0.0.1:8000/cgi/php/main.php" class="more-link">Visit the original article</a>
+  <a target="_blank" href="http://127.0.0.1:8000/cgi/php/main.php" class="more-link">Lien vers un truc qui marche</a>
 </div>
